--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,24 +1,83 @@
----
-layout: default
-title: About
-permalink: /about/
----
-<section class="about">
-  <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>About - Mahaveer Satra</title> <!-- The title will appear on the tab name -->
+	<meta name="description" content="A place to share my experiences and blogs regarding life, purpose, soccer, hiking and entrepreneurship">  <!-- The description will be used by search engines-->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!-- To adjust the viewing area which the user will see and to fit different platforms -->
+	<meta property="og:image" content=""> <!--https://css-tricks.com/essential-meta-tags-social-media/ useful for sharing website on social media -->
+	<link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-touch-icon-114x114.png">
+	<!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="#d25469">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#d25469">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#d25469">
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+	<link rel="stylesheet" href="/assets/fonts/font-awesome/css/font-awesome.min.css">
+	<!-- Styles -->
+	<link rel="stylesheet" href="/assets/css/main.css">
+</head>
+
+<body>
+
+  <section class="about">
+  <a href="/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
   <div class="about_box">
     <div class="author">
         <div class="author_image">
-          <img src="{{site.baseurl}}/assets/img/{% if site.author-pic %}{{site.author-pic}}{% endif %}" alt="Author image">
+          <img src="/assets/img/face.jpg" alt="Mahaveer Satra">
         </div>
         <div class="author_info">
-          <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Dwayne Newman{% endif %}</h2>
-          <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
-          <p class="author_subtitle">Brunch sustainable tote bag offal pitchfork, jean shorts readymade lomo poutine freegan sriracha palo santo fam hammock.</p>
+          <h2 class="author_title">Mahaveer Satra</h2>
+          <p class="author_subtitle">An outdoor fanatic, eager to learn bits and pieces about our strange world</p>
+          <p class="author_subtitle">Enjoy the articles and projects and feel free to reach out to discuss any strange idea which can improve the world. We can render it to reality.</p>
         </div>
       </div>
 
       <div class="about_social">
-        {% include social_footer.html %}
+        
+<ul class="social_footer">
+  
+  <li><a href="https://www.linkedin.com/in/mahaveer-satra/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>      
+  
+  
+  <li><a href="https://www.instagram.com/mahaveersatra/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+  
+
+  <li><a href="https://mahaveersatra.medium.com/" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
+  
+  
+  <li><a href="https://twitter.com/Mahaveersatra" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+  
+  
+  <li><a href="https://www.facebook.com/mahaveer.satra" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+  
+</ul>
       </div>
     </div> <!-- End Section Author -->
 </section>
+
+  
+<div class="top" title="Top"><i class="fa fa-chevron-up" aria-hidden="true"></i></div> <!-- End Top Scroll -->
+  
+<script src="/assets/js/jquery-3.2.1.min.js"></script>
+<script src="/assets/js/jquery.vide.min.js"></script>
+<script src="/assets/js/custom.js"></script>
+<!-- End Javascript -->
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', '', 'auto');
+  ga('send', 'pageview');
+</script> <!-- End Analytics -->
+</body>
+</html>
