--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,7 +13,7 @@ permalink: /about/
         <div class="author_info">
           <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Dwayne Newman{% endif %}</h2>
           <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
-          <p class="author_subtitle">Brunch sustainable tote bag offal pitchfork, jean shorts readymade lomo poutine freegan sriracha palo santo fam hammock.</p>
+          <p class="author_subtitle">Enjoy the articles and projects and feel free to reach out to discuss any strange idea which can improve the world. We can render it to reality.</p>
         </div>
       </div>
 
